# letta-code

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  SSH_ACCESS.md  biome.json  bird_sleep_handoff.md  build.js  bunfig.toml  church-nonprofit-financial-plan.md  diagnosing-self-hosted-summary-failures.skill  divide_and_conquer_scissari_fix.html  extended_notes.md  fix_ssh_auth.ps1  fix_ssh_config.ps1  handoff.md  letta-file-capture.sh  memorial_day_handoff.md  messages.json  new_file_to_copy.sh  note_about_jery.html  package-lock.json  package.json  receipt-parse-html-report.skill  recon.sh  start_docker.sh  steps_for_executing_the_start_button.md  team_construction_plan.html  tsconfig.json  useful_patterns.md  using-tmux.skill  verification_tracker.html  wednesday_may_21_handoff.md  windows10-public-internet-url-logviewer-v2.ps1  windows10-public-internet-url-logviewer-v3.ps1  wsl_compactor_skill_instructions.md
scissari-executor-fix/: README.md  WIRING.md  pyproject.toml  requirements.txt
scissari-executor-fix/port-typescript/: sessionSupervisor.ts
scissari-executor-fix/scissari_executor/: __init__.py  breaker.py  classifiers.py  guard.py  interfaces.py  models.py  service.py  strategies.py
scissari-executor-fix/scissari_executor/session/: __init__.py  health.py  interfaces.py  (+4 more)
scissari-executor-fix/tests/: fakes.py  test_circuit_breaker.py  test_classifier.py  test_keepalive.py  test_loop_guard.py  test_recovery_paths.py  test_resilient_transport.py  test_response_lost.py  test_service_facade.py  test_session_health.py  test_session_supervisor.py
(+625 files in other folders)
